--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="promo__title">МАРСИАНИН</div>
                 <div class="promo__descr">ИСТОРИЯ ЧЕЛОВЕКА, ВЫЖИВШЕГО НА ЧУЖОЙ ПЛАНЕТЕ В ОДИНОЧКУ</div>
                 <div class="promo__ratings">
-                    <span class="year">Year: 2015</span>
-                    <span class="rating">Кинопоиск: 7.7</span>
+                    <span>IMDb: 8.0</span>
+                    <span>Кинопоиск: 7.7</span>
                 </div>
             </div>
             <div class="promo__interactive">
@@ -82,6 +82,6 @@
         </div>
     </main>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
